<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:text="@string/hello"
        />

    <Button
        android:id="@+id/startIntent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_centerHorizontal="true"
        android:onClick="cridaSubaccio"
        android:text="@string/botocrida"
        />

    <Button
        android:id="@+id/botoCompartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startIntent"
        android:layout_centerHorizontal="true"
        android:onClick="compartir"
        android:text="@string/compartir"
        />

    <Button
        android:id="@+id/botoTercera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/botoCompartir"
        android:layout_centerHorizontal="true"
        android:onClick="abrirTercera"
        android:text="@string/tercera"
        />

    <Button
        android:id="@+id/botonQuarta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/botoTercera"
        android:layout_centerHorizontal="true"
        android:onClick="abrirCuarta"
        android:text="@string/quarta"
        />

</RelativeLayout>