<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/boto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:text="@string/primerBoton"
        />

    <Button
        android:id="@+id/boto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/boto1"
        android:layout_centerHorizontal="true"
        android:text="@string/segundoBoton"
        />

    <Button
        android:id="@+id/boto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/boto2"
        android:layout_centerHorizontal="true"
        android:text="@string/tercerBoton"
        />

    <Button
        android:id="@+id/boto4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/boto3"
        android:layout_centerHorizontal="true"
        android:text="@string/cuartoBoton"
        />

</RelativeLayout>